# moments

./: .gitignore  index.html  package-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bigquery.py  client_secret.json  constants.py  credentials.py  pubsub.py  pyproject.toml  redis_wrapper.py  requirements.txt  utils.py  youtube_app.py
backend/static/videos/: README.md
backend/templates/: upload-tus.html
editor/: package-lock.json  package.json  vite.config.ts
editor-frontend/: .env  .env.dev  .env.production  .env.staging  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
editor-frontend/src/: index.css  main.tsx  stats.ts  youtube.ts
editor-frontend/src/assets/icons/: IconCopy.tsx  IconCrop.tsx  IconDirectionalArrow.tsx  IconDownload.tsx  IconEdit.tsx  IconPause.tsx  IconPlay.tsx  IconProductLogo.tsx  IconReset.tsx  IconTiktok.tsx  IconTrash.tsx  IconTrim.tsx  IconYoutube.tsx  index.ts
editor-frontend/src/components/: App.tsx  Page404.tsx  Toaster.tsx
editor-frontend/src/components/Button/: index.tsx
editor-frontend/src/components/Divider/: index.tsx
editor-frontend/src/components/EditingOverlay/: index.tsx
editor-frontend/src/components/Editor/: index.tsx
editor-frontend/src/components/Header/: DeletePopup.tsx  header.css  index.tsx
editor-frontend/src/components/IconButton/: index.tsx
editor-frontend/src/components/Loader/: index.tsx
editor-frontend/src/components/LoginPopup/: index.tsx  login.css
editor/src/components/: App.tsx
login/: index.html
(+12 files in other folders)
