[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["syedmehdi-bst <syedmehdi.abbas@bluestacks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"
google-cloud-secret-manager = "^2.16.4"
google-cloud-logging = "^3.8.0"
flask-cors = "^4.0.0"
memory-profiler = "^0.61.0"
ffmpeg-python = "^0.2.0"
google-cloud-pubsub = "^2.18.4"
redis = "^5.0.1"
google-cloud-bigquery = "^3.13.0"
google-api-python-client = "^2.112.0"
google-auth = "^2.26.1"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
flask-session = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
